# fastevent

./: .pdm.toml  .pylintrc  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
fastevent/: app.py
