[project]
name = "fastevent"
dynamic = ["version"]
description = ""
authors = [
    {name = "comfuture", email = "comfuture@gmail.com"},
]
dependencies = [
    "fastapi>=0.79.0",
    "python-dotenv>=0.20.0",
    "python-multipart>=0.0.5",
    "uvicorn>=0.18.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "Faker>=13.15.1",
]

[tool.pdm.scripts]
migration-create = {cmd = [
    "docker-compose", "exec", "edgedb", "edgedb", "--tls-security=insecure", "migration", "create",
]}
migrate = {cmd = [
    "docker-compose", "exec", "edgedb", "edgedb", "--tls-security=insecure", "migrate",
]}
